--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     // ViewModel
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation "androidx.fragment:fragment-ktx:1.3.2"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
