--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ apply plugin: "androidx.navigation.safeargs"
 android {
     compileSdkVersion 30
     defaultConfig {
-        applicationId "com.example.android.guesstheword"
-        minSdkVersion 26
+        applicationId "com.example.android.postcard"
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -50,4 +50,5 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation "androidx.fragment:fragment-ktx:1.3.2"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
